# gridftp_acl_plugin

./: .gitignore  README.md  Vagrantfile
demo-scripts/sprint2/: ftpClient.py
demos/sprint1/: 3-setup_2_vagrant_boxes_with_gridftp  investigate-example-plugin.md  new-cpp-solution.md  plugin-documentation.md
demos/sprint2/: 5-get_permissions.md  6-set-file-permissions.md  gridftp-dev-process.md
dev-environment/: gridftp-plugin-dev.yml  hosts.template
dev-environment/roles/dev/tasks/: globus.yml  main.yml  ninja.yml
dev-environment/roles/gridftp/tasks/: main.yml
dev-environment/roles/python/tasks/: main.yml
src/: CMakeLists.txt  ftpClient.py  main.cpp  permissions_plugin.cpp  run-code-analysis.sh  run-code-coverage.sh  run-gridftp-server.sh  timingTest.sh
src/application/: FileInfoProvider.cpp  FileInfoProvider.h  IFileInfoProvider.h  IPermissionsReader.h  IUtils.h  Utils.cpp  Utils.h  permissionsFormatter.cpp  permissionsFormatter.h  permissionsReader.cpp  permissionsReader.h  permissionsSetter.cpp  permissionsSetter.h
src/cmake/: Findglobus.cmake  globuscompile.py
src/dependencies/: gtest.in  spdlog.in
src/framework/logger/: ILogger.h  logger.cpp  logger.h
src/systemTests/: .gitignore  generateRandomFile.sh  pytest.ini
src/systemTests/test-scenarios/: conftest.py  context.py  file_info_test.py
src/systemTests/test-scenarios/given/: dms_environment.py  given_steps.py  runSystemTestFuseClient.sh  runSystemTestWebApi.sh
src/systemTests/test-scenarios/then/: folder_steps.py  log_file_steps.py  then_steps.py
src/systemTests/test-scenarios/tools/: process_logger.py
src/systemTests/test-scenarios/when/: when_steps.py
src/test/: CMakeLists.txt  exampleTest.cpp
src/test/application/: MockFileInfoProvider.h  MockUtils.h  PermissionsSetterTests.cpp  UtilsTests.cpp  permissionsReaderTests.cpp
src/test/globus-gridftp-osg-extensions/: CMakeLists.txt  README.md  globus-gridftp-osg-extensions.spec
src/test/globus-gridftp-osg-extensions/cmake/: FindGlobusFtpControl.cmake
src/test/globus-gridftp-osg-extensions/src/: globus_error_macros.h  osg_extension_dsi.c
systemTests/test-scenarios/: conftest.py  context.py  get_permissions_file_directory_test.py  get_permissions_logs_test.py  gridftp_run_test.py
systemTests/test-scenarios/given/: given_steps.py  gridftp_with_plugin.py
systemTests/test-scenarios/then/: folder_steps.py  then_steps.py
systemTests/test-scenarios/when/: gridftp_with_plugin.py  when_steps.py
